services/jellyfin/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jellyfin
spec:
  replicas: 1
  selector:
    matchLabels:
      app: jellyfin
  template:
    metadata:
      labels:
        app: jellyfin
    spec:
      containers:
        - name: jellyfin
          image: jellyfin/jellyfin
          imagePullPolicy: Always
          resources:
            requests:
              memory: 4Gi
              cpu: 4000m
          securityContext:
            privileged: true
          ports:
            - containerPort: 8096
              name: http-tcp
              protocol: TCP
            - containerPort: 8920
              name: https-tcp
              protocol: TCP
          stdin: true
          tty: true
          volumeMounts:
            - name: jellyfin-config
              mountPath: /config
            - name: jellyfin-media
              mountPath: /data
      volumes:
        - name: jellyfin-config
          hostPath:
            path: /mnt/jellyfin/config
        - name: jellyfin-media
          hostPath:
            path: /mnt/jellyfin/data
