services/jellyfin/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: jellyfin
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.tls: "true"
    gethomepage.dev/enabled: "true"
    gethomepage.dev/description: Jellyfin is the volunteer-built media solution that puts you in control of your media.
    gethomepage.dev/group: Media
    gethomepage.dev/icon: jellyfin.png
    gethomepage.dev/name: Jellyfin
    gethomepage.dev/widget.type: "jellyfin"
    gethomepage.dev/widget.url: "https://netflix.home.pynenborg.com"
    gethomepage.dev/widget.key: "6450afab16e94ee5a69c4687033ab675"
    gethomepage.dev/pod-selector: ""
spec:
  rules:
    - host: "netflix.home.pynenborg.com"
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: jellyfin
                port:
                  number: 80
  tls:
    - hosts:
        - "netflix.home.pynenborg.com"
      secretName: jellyfin-cert
---
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: redirect
spec:
  redirectScheme:
    scheme: https
    permanent: true
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: jellyfin-redirect
  annotations:
    traefik.ingress.kubernetes.io/router.middlewares: jellyfin-redirect@kubernetescrd
    traefik.ingress.kubernetes.io/router.entrypoints: web
spec:
  rules:
    - host: "netflix.home.pynenborg.com"
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: jellyfin
                port:
                  number: 80
